--- a/css/layout.css
+++ b/css/layout.css
@@ -160,3 +160,25 @@ display: block;
 transition-delay: 1s;
 visibility: hidden;
 } */
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* background: #f1f1f1; */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  height: 80px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  height: 80px;
+}
